# jetson-orin-kian

./: .gitignore  BONSAI.md  INSTALL.md  LICENSE  README.md  benchmark-results-all.csv  benchmark-results1.csv  benchmark-results2.csv  benchmark-results3.csv  benchmark-results4.csv  benchmark-results5.csv  kian-gpio.service  kian.env  kian.service  names.txt  naughty.txt  pyproject.toml  quality-results.csv
docs/: benchmark-probe-table.tex  benchmark-table.tex  build.sh  kian.tex  litepaper.tex  quality-table.tex  refs.bib
kian/: app.py  latex_to_speech.py  leds.py  llm.py  llm_llamacpp.py  llm_mlc.py  llm_ollama.py  llm_server.py  mic.py  naughty.py  safety.py  stt.py  tts.py  vad.py  wiki.py
scripts/: 80-kian-gpu-memory.conf  benchmark-all.sh  benchmark-llm.py  benchmark-prompts.txt  benchmark-table.py  build-prismml-llama.sh  build-wiki-db.py  ci_naughty.py  co-naughty.py  download-bonsai.sh  download-models.sh  enable_gpio.sh  extract-conversations.py  install-gpio.sh  install-service.sh  install-sysctl.sh  mic_test.py  pull-benchmark-models.sh  qualitative-study.py  quality-table.py  setup-audio.sh  setup-my-audio.sh  test_lights.py  uninstall-sysctl.sh  unload-ollama.sh
tests/: test_control_phrases.py  test_latex_to_speech.py  test_wiki.py
