[project]
name = "kian"
version = "0.1.0"
description = "Voice assistant: VAD → Whisper → LLM (llama.cpp or MLC) → Piper TTS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "onnxruntime>=1.17",
    "faster-whisper>=1.1.0",
    "llama-cpp-python>=0.3.19",
    "piper-tts>=1.4",
    "sounddevice>=0.5",
    "numpy>=1.24",
    "jetson-gpio>=2.1.12",
    "pulsectl>=24.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
kian = "kian.app:main"

# [[tool.uv.index]]
# url = "https://pypi.jetson-ai-lab.io/jp6/cu126"
